modify EDA: RawImageSizeAnalysis의 누락된 설명 추가

--- a/EDA/Raw Image Size Analysis.ipynb
+++ b/EDA/Raw Image Size Analysis.ipynb
@@ -85,6 +85,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Image Size"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -109,6 +116,13 @@
     "pool = mp.Pool()\n",
     "info_train = pool.map(get_real_image_size, tqdm(info_train))\n",
     "info_test = pool.map(get_real_image_size, tqdm(info_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis Image Size"
    ]
   },
   {
