swin model tuning

--- a/EDA/datasplit_EDA.ipynb
+++ b/EDA/datasplit_EDA.ipynb
@@ -17835,7 +17835,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('workspace-RHZy4fmo': pipenv)",
+   "display_name": "Python 3.8.5 ('cv18-detection-aNucPvec': pipenv)",
    "language": "python",
    "name": "python3"
   },
@@ -17853,7 +17853,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "784c6822d5f006df8f6940c0cd0a8e5c2afa0de1a63b73b5b5e22cac90c9f34b"
+    "hash": "72645147a269e0d9246d4d911151fd07088c5af93a7af1a51cc0386dec7706eb"
    }
   }
  },
