--- a/T4148/inference.ipynb
+++ b/T4148/inference.ipynb
@@ -63,29 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "edda58ea",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'ConfigDict' object has no attribute 'roi_head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 25\u001b[0m\n\u001b[1;32m     22\u001b[0m cfg\u001b[39m.\u001b[39mwork_dir \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/opt/ml/cv18-detection/T4148/work_dirs/retina_swin_L\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     23\u001b[0m cfg\u001b[39m.\u001b[39mcsvsave_dir \u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/opt/ml/cv18-detection/T4148/configs/retina_swin_L\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 25\u001b[0m cfg\u001b[39m.\u001b[39;49mmodel\u001b[39m.\u001b[39;49mroi_head\u001b[39m.\u001b[39mbbox_head\u001b[39m.\u001b[39mnum_classes \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\n\u001b[1;32m     27\u001b[0m cfg\u001b[39m.\u001b[39moptimizer_config\u001b[39m.\u001b[39mgrad_clip \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(max_norm\u001b[39m=\u001b[39m\u001b[39m35\u001b[39m, norm_type\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m     28\u001b[0m cfg\u001b[39m.\u001b[39mmodel\u001b[39m.\u001b[39mtrain_cfg \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/cv18-detection-aNucPvec/lib/python3.8/site-packages/mmcv/utils/config.py:50\u001b[0m, in \u001b[0;36mConfigDict.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     49\u001b[0m     \u001b[39mreturn\u001b[39;00m value\n\u001b[0;32m---> 50\u001b[0m \u001b[39mraise\u001b[39;00m ex\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ConfigDict' object has no attribute 'roi_head'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "classes = (\"General trash\", \"Paper\", \"Paper pack\", \"Metal\", \"Glass\", \n",
     "           \"Plastic\", \"Styrofoam\", \"Plastic bag\", \"Battery\", \"Clothing\")\n",
     "\n",
     "# config file 들고오기\n",
-    "cfg = Config.fromfile('/opt/ml/cv18-detection/T4148/configs/retina_swin_L/run.py')\n",
+    "cfg = Config.fromfile('/opt/ml/cv18-detection/T4148/configs/retina_swin_L_v3/run.py')\n",
     "\n",
     "root='/opt/ml/dataset/'\n",
     "\n",
@@ -102,10 +89,10 @@
     "\n",
     "cfg.seed=2021\n",
     "cfg.gpu_ids = [1]\n",
-    "cfg.work_dir = '/opt/ml/cv18-detection/T4148/work_dirs/retina_swin_L'\n",
-    "cfg.csvsave_dir ='/opt/ml/cv18-detection/T4148/configs/retina_swin_L'\n",
-    "\n",
-    "cfg.model.roi_head.bbox_head.num_classes = 10\n",
+    "cfg.work_dir = '/opt/ml/work_dirs/retina_swin_L_v3'\n",
+    "cfg.csvsave_dir =cfg.work_dir\n",
+    "#cfg.model.roi_head.bbox_head.num_classes = 10\n",
+    "cfg.model.bbox_head.num_classes = 10\n",
     "\n",
     "cfg.optimizer_config.grad_clip = dict(max_norm=35, norm_type=2)\n",
     "cfg.model.train_cfg = None"
@@ -113,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "b086a8cf",
    "metadata": {},
    "outputs": [
@@ -141,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "83b3eae6",
    "metadata": {},
    "outputs": [
@@ -149,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load checkpoint from local path: /opt/ml/cv18-detection/work_dirs/faster_rcnn_swin/latest.pth\n"
+      "load checkpoint from local path: /opt/ml/work_dirs/retina_swin_L_v3/latest.pth\n"
      ]
     }
    ],
@@ -166,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "c9f5c2bb",
    "metadata": {},
    "outputs": [
@@ -174,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 27.4 task/s, elapsed: 178s, ETA:     0s"
+      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 15.2 task/s, elapsed: 320s, ETA:     0s"
      ]
     }
    ],
@@ -184,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "5672a0ff",
    "metadata": {},
    "outputs": [
@@ -226,27 +213,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 0.073074356 241.76273 671.681 293.28934 749....</td>\n",
+       "      <td>0 0.5239088 236.01587 685.78503 302.60468 750....</td>\n",
        "      <td>test/0000.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0 0.6817706 633.1064 634.91486 685.8909 829.29...</td>\n",
+       "      <td>0 0.44567618 751.0838 651.2268 895.5535 988.29...</td>\n",
        "      <td>test/0001.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0 0.56336254 871.9589 440.24252 1005.94806 640...</td>\n",
+       "      <td>0 0.5161325 430.63684 272.87323 664.29663 340....</td>\n",
        "      <td>test/0002.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0 0.19814515 16.876595 43.078857 240.70581 535...</td>\n",
+       "      <td>0 0.41132918 23.627808 70.52054 1024.0 976.033...</td>\n",
        "      <td>test/0003.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0 0.44982508 318.554 335.91107 864.6084 772.20...</td>\n",
+       "      <td>0 0.47701162 457.1854 410.60812 643.5305 539.7...</td>\n",
        "      <td>test/0004.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -255,14 +242,14 @@
       ],
       "text/plain": [
        "                                    PredictionString       image_id\n",
-       "0  0 0.073074356 241.76273 671.681 293.28934 749....  test/0000.jpg\n",
-       "1  0 0.6817706 633.1064 634.91486 685.8909 829.29...  test/0001.jpg\n",
-       "2  0 0.56336254 871.9589 440.24252 1005.94806 640...  test/0002.jpg\n",
-       "3  0 0.19814515 16.876595 43.078857 240.70581 535...  test/0003.jpg\n",
-       "4  0 0.44982508 318.554 335.91107 864.6084 772.20...  test/0004.jpg"
+       "0  0 0.5239088 236.01587 685.78503 302.60468 750....  test/0000.jpg\n",
+       "1  0 0.44567618 751.0838 651.2268 895.5535 988.29...  test/0001.jpg\n",
+       "2  0 0.5161325 430.63684 272.87323 664.29663 340....  test/0002.jpg\n",
+       "3  0 0.41132918 23.627808 70.52054 1024.0 976.033...  test/0003.jpg\n",
+       "4  0 0.47701162 457.1854 410.60812 643.5305 539.7...  test/0004.jpg"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
