--- a/EDA/datasplit_EDA.ipynb
+++ b/EDA/datasplit_EDA.ipynb
@@ -17835,21 +17835,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('cv18-detection-aNucPvec': pipenv)",
+   "display_name": "detection",
    "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "name": "detection"
   },
   "vscode": {
    "interpreter": {
