--- a/T4148/inference.ipynb
+++ b/T4148/inference.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "edda58ea",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "           \"Plastic\", \"Styrofoam\", \"Plastic bag\", \"Battery\", \"Clothing\")\n",
     "\n",
     "# config file 들고오기\n",
-    "cfg = Config.fromfile('/opt/ml/cv18-detection/T4148/configs/retina_swin_L_v3/run.py')\n",
+    "cfg = Config.fromfile('/opt/ml/cv18-detection/T4148/configs/retina_swin_t_v1/run.py')\n",
     "\n",
     "root='/opt/ml/dataset/'\n",
     "\n",
@@ -89,7 +89,7 @@
     "\n",
     "cfg.seed=2021\n",
     "cfg.gpu_ids = [1]\n",
-    "cfg.work_dir = '/opt/ml/work_dirs/retina_swin_L_v3'\n",
+    "cfg.work_dir = '/opt/ml/work_dirs/retina_swin_t_v1'\n",
     "cfg.csvsave_dir =cfg.work_dir\n",
     "#cfg.model.roi_head.bbox_head.num_classes = 10\n",
     "cfg.model.bbox_head.num_classes = 10\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b086a8cf",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "83b3eae6",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load checkpoint from local path: /opt/ml/work_dirs/retina_swin_L_v3/latest.pth\n"
+      "load checkpoint from local path: /opt/ml/work_dirs/retina_swin_t_v1/latest.pth\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c9f5c2bb",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 15.2 task/s, elapsed: 320s, ETA:     0s"
+      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 26.7 task/s, elapsed: 183s, ETA:     0s"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5672a0ff",
    "metadata": {},
    "outputs": [
@@ -213,27 +213,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 0.5239088 236.01587 685.78503 302.60468 750....</td>\n",
+       "      <td>0 0.3715949 239.29817 682.7553 304.42886 747.6...</td>\n",
        "      <td>test/0000.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0 0.44567618 751.0838 651.2268 895.5535 988.29...</td>\n",
+       "      <td>0 0.33897918 728.0399 652.027 893.40955 934.81...</td>\n",
        "      <td>test/0001.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0 0.5161325 430.63684 272.87323 664.29663 340....</td>\n",
+       "      <td>0 0.32416353 675.47064 230.25342 904.70123 326...</td>\n",
        "      <td>test/0002.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0 0.41132918 23.627808 70.52054 1024.0 976.033...</td>\n",
+       "      <td>0 0.4237549 82.700836 236.82153 980.0326 928.6...</td>\n",
        "      <td>test/0003.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0 0.47701162 457.1854 410.60812 643.5305 539.7...</td>\n",
+       "      <td>0 0.5579908 230.29929 308.22363 869.80225 769....</td>\n",
        "      <td>test/0004.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -242,14 +242,14 @@
       ],
       "text/plain": [
        "                                    PredictionString       image_id\n",
-       "0  0 0.5239088 236.01587 685.78503 302.60468 750....  test/0000.jpg\n",
-       "1  0 0.44567618 751.0838 651.2268 895.5535 988.29...  test/0001.jpg\n",
-       "2  0 0.5161325 430.63684 272.87323 664.29663 340....  test/0002.jpg\n",
-       "3  0 0.41132918 23.627808 70.52054 1024.0 976.033...  test/0003.jpg\n",
-       "4  0 0.47701162 457.1854 410.60812 643.5305 539.7...  test/0004.jpg"
+       "0  0 0.3715949 239.29817 682.7553 304.42886 747.6...  test/0000.jpg\n",
+       "1  0 0.33897918 728.0399 652.027 893.40955 934.81...  test/0001.jpg\n",
+       "2  0 0.32416353 675.47064 230.25342 904.70123 326...  test/0002.jpg\n",
+       "3  0 0.4237549 82.700836 236.82153 980.0326 928.6...  test/0003.jpg\n",
+       "4  0 0.5579908 230.29929 308.22363 869.80225 769....  test/0004.jpg"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
