--- a/T4148/inference.ipynb
+++ b/T4148/inference.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "edda58ea",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "b086a8cf",
    "metadata": {},
    "outputs": [
@@ -128,21 +128,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "83b3eae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checkpoint path\n",
+    "checkpoint_path = os.path.join(cfg.work_dir, f'{epoch}.pth')\n",
+    "checkpoint_path ='/opt/ml/work_dirs/retina_resnet101/best_bbox_mAP_epoch_31.pth'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2bbe1bd9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load checkpoint from local path: /opt/ml/work_dirs/retina_resnet101/latest.pth\n"
+      "load checkpoint from local path: /opt/ml/work_dirs/retina_resnet101/best_bbox_mAP_epoch_31.pth\n"
      ]
     }
    ],
    "source": [
-    "# checkpoint path\n",
-    "checkpoint_path = os.path.join(cfg.work_dir, f'{epoch}.pth')\n",
+    "\n",
     "\n",
     "model = build_detector(cfg.model, test_cfg=cfg.get('test_cfg')) # build detector\n",
     "checkpoint = load_checkpoint(model, checkpoint_path, map_location='cpu') # ckpt load\n",
@@ -153,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "c9f5c2bb",
    "metadata": {},
    "outputs": [
@@ -161,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 25.2 task/s, elapsed: 193s, ETA:     0s"
+      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 25.1 task/s, elapsed: 194s, ETA:     0s"
      ]
     }
    ],
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "5672a0ff",
    "metadata": {},
    "outputs": [
@@ -213,27 +224,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 0.34422088 568.87665 155.50381 843.97943 519...</td>\n",
+       "      <td>0 0.27892756 233.52374 674.40454 306.97662 752...</td>\n",
        "      <td>test/0000.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0 0.46902066 757.4537 663.7128 895.5986 993.71...</td>\n",
+       "      <td>0 0.37935483 757.0795 647.31226 893.52435 991....</td>\n",
        "      <td>test/0001.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0 0.58460295 78.310074 266.97137 375.31604 597...</td>\n",
+       "      <td>0 0.34037665 433.38437 264.048 642.9404 329.74...</td>\n",
        "      <td>test/0002.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0 0.5497735 198.36728 248.46927 865.6194 882.4...</td>\n",
+       "      <td>0 0.46486515 141.41467 221.64877 883.82837 813...</td>\n",
        "      <td>test/0003.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0 0.77910435 214.72144 311.4076 854.38745 764....</td>\n",
+       "      <td>0 0.54643536 434.448 401.52084 669.88696 560.1...</td>\n",
        "      <td>test/0004.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -242,14 +253,14 @@
       ],
       "text/plain": [
        "                                    PredictionString       image_id\n",
-       "0  0 0.34422088 568.87665 155.50381 843.97943 519...  test/0000.jpg\n",
-       "1  0 0.46902066 757.4537 663.7128 895.5986 993.71...  test/0001.jpg\n",
-       "2  0 0.58460295 78.310074 266.97137 375.31604 597...  test/0002.jpg\n",
-       "3  0 0.5497735 198.36728 248.46927 865.6194 882.4...  test/0003.jpg\n",
-       "4  0 0.77910435 214.72144 311.4076 854.38745 764....  test/0004.jpg"
+       "0  0 0.27892756 233.52374 674.40454 306.97662 752...  test/0000.jpg\n",
+       "1  0 0.37935483 757.0795 647.31226 893.52435 991....  test/0001.jpg\n",
+       "2  0 0.34037665 433.38437 264.048 642.9404 329.74...  test/0002.jpg\n",
+       "3  0 0.46486515 141.41467 221.64877 883.82837 813...  test/0003.jpg\n",
+       "4  0 0.54643536 434.448 401.52084 669.88696 560.1...  test/0004.jpg"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
