--- a/EDA/Annotation per Image Analysis.ipynb
+++ b/EDA/Annotation per Image Analysis.ipynb
@@ -18,11 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -49,11 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "CONFIG = {\n",
@@ -73,11 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(os.path.join(CONFIG['path_data'], CONFIG['info_data_train'])) as js:\n",
@@ -87,11 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -116,11 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -169,11 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -199,11 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -240,11 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -266,25 +234,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "detection",
+   "display_name": "Python 3.8.5 ('cv18-detection-aNucPvec': pipenv)",
    "language": "python",
-   "name": "detection"
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "61e9ebdc0d31fad5e883cf2ac28a647f3eb3ae68ad120f6bd918e52a4b89fa54"
+    "hash": "72645147a269e0d9246d4d911151fd07088c5af93a7af1a51cc0386dec7706eb"
    }
   }
  },
