--- a/EDA/datasplit_EDA.ipynb
+++ b/EDA/datasplit_EDA.ipynb
@@ -17835,9 +17835,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "detection",
+   "display_name": "Python 3.8.5 ('cv18-detection-aNucPvec': pipenv)",
    "language": "python",
-   "name": "detection"
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
