--- a/T4148/inference.ipynb
+++ b/T4148/inference.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "3fd75793",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/ml/.local/share/virtualenvs/cv18-detection-aNucPvec/lib/python3.8/site-packages/mmcv/__init__.py:20: UserWarning: On January 1, 2023, MMCV will release v2.0.0, in which it will remove components related to the training process and add a data transformation module. In addition, it will rename the package names mmcv to mmcv-lite and mmcv-full to mmcv. See https://github.com/open-mmlab/mmcv/blob/master/docs/en/compatibility.md for more details.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mmcv\n",
     "from mmcv import Config\n",
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "f8edd9b9",
    "metadata": {},
    "outputs": [
@@ -43,7 +34,7 @@
        "'/opt/ml/cv18-detection/T4148'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "edda58ea",
    "metadata": {},
    "outputs": [],
@@ -72,7 +63,7 @@
     "           \"Plastic\", \"Styrofoam\", \"Plastic bag\", \"Battery\", \"Clothing\")\n",
     "\n",
     "# config file 들고오기\n",
-    "cfg = Config.fromfile('/opt/ml/cv18-detection/T4148/configs/retina_resnet101/run.py')\n",
+    "cfg = Config.fromfile('/opt/ml/cv18-detection/T4148/configs/retina_resnext_v1/run.py')\n",
     "\n",
     "root='/opt/ml/dataset/'\n",
     "\n",
@@ -89,7 +80,7 @@
     "\n",
     "cfg.seed=2021\n",
     "cfg.gpu_ids = [1]\n",
-    "cfg.work_dir = '/opt/ml/work_dirs/retina_resnet101'\n",
+    "cfg.work_dir = '/opt/ml/work_dirs/retina_resnext_v1'\n",
     "cfg.csvsave_dir =cfg.work_dir\n",
     "#cfg.model.roi_head.bbox_head.num_classes = 10\n",
     "cfg.model.bbox_head.num_classes = 10\n",
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "b086a8cf",
    "metadata": {},
    "outputs": [
@@ -128,19 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "83b3eae6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# checkpoint path\n",
     "checkpoint_path = os.path.join(cfg.work_dir, f'{epoch}.pth')\n",
-    "checkpoint_path ='/opt/ml/work_dirs/retina_resnet101/best_bbox_mAP_epoch_31.pth'"
+    "checkpoint_path ='/opt/ml/work_dirs/retina_resnext_v1/best_bbox_mAP_epoch_37.pth'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "2bbe1bd9",
    "metadata": {},
    "outputs": [
@@ -148,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load checkpoint from local path: /opt/ml/work_dirs/retina_resnet101/best_bbox_mAP_epoch_31.pth\n"
+      "load checkpoint from local path: /opt/ml/work_dirs/retina_resnext_v1/best_bbox_mAP_epoch_37.pth\n"
      ]
     }
    ],
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "c9f5c2bb",
    "metadata": {},
    "outputs": [
@@ -172,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 25.1 task/s, elapsed: 194s, ETA:     0s"
+      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 18.6 task/s, elapsed: 263s, ETA:     0s"
      ]
     }
    ],
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "5672a0ff",
    "metadata": {},
    "outputs": [
@@ -224,27 +215,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 0.27892756 233.52374 674.40454 306.97662 752...</td>\n",
+       "      <td>0 0.429913 236.61542 688.84796 303.92267 748.8...</td>\n",
        "      <td>test/0000.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0 0.37935483 757.0795 647.31226 893.52435 991....</td>\n",
+       "      <td>0 0.44260532 743.71844 650.6339 900.663 990.96...</td>\n",
        "      <td>test/0001.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0 0.34037665 433.38437 264.048 642.9404 329.74...</td>\n",
+       "      <td>0 0.52844536 415.0647 277.06625 660.82556 326....</td>\n",
        "      <td>test/0002.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0 0.46486515 141.41467 221.64877 883.82837 813...</td>\n",
+       "      <td>0 0.24995495 8.917694 183.7544 1009.94055 880....</td>\n",
        "      <td>test/0003.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0 0.54643536 434.448 401.52084 669.88696 560.1...</td>\n",
+       "      <td>0 0.7174196 199.86447 295.46085 839.49194 760....</td>\n",
        "      <td>test/0004.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -253,14 +244,14 @@
       ],
       "text/plain": [
        "                                    PredictionString       image_id\n",
-       "0  0 0.27892756 233.52374 674.40454 306.97662 752...  test/0000.jpg\n",
-       "1  0 0.37935483 757.0795 647.31226 893.52435 991....  test/0001.jpg\n",
-       "2  0 0.34037665 433.38437 264.048 642.9404 329.74...  test/0002.jpg\n",
-       "3  0 0.46486515 141.41467 221.64877 883.82837 813...  test/0003.jpg\n",
-       "4  0 0.54643536 434.448 401.52084 669.88696 560.1...  test/0004.jpg"
+       "0  0 0.429913 236.61542 688.84796 303.92267 748.8...  test/0000.jpg\n",
+       "1  0 0.44260532 743.71844 650.6339 900.663 990.96...  test/0001.jpg\n",
+       "2  0 0.52844536 415.0647 277.06625 660.82556 326....  test/0002.jpg\n",
+       "3  0 0.24995495 8.917694 183.7544 1009.94055 880....  test/0003.jpg\n",
+       "4  0 0.7174196 199.86447 295.46085 839.49194 760....  test/0004.jpg"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
