--- a/T4148/inference.ipynb
+++ b/T4148/inference.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "3fd75793",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/ml/.local/share/virtualenvs/cv18-detection-aNucPvec/lib/python3.8/site-packages/mmcv/__init__.py:20: UserWarning: On January 1, 2023, MMCV will release v2.0.0, in which it will remove components related to the training process and add a data transformation module. In addition, it will rename the package names mmcv to mmcv-lite and mmcv-full to mmcv. See https://github.com/open-mmlab/mmcv/blob/master/docs/en/compatibility.md for more details.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mmcv\n",
     "from mmcv import Config\n",
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "f8edd9b9",
    "metadata": {},
    "outputs": [
@@ -43,7 +34,7 @@
        "'/opt/ml/cv18-detection/T4148'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "edda58ea",
    "metadata": {},
    "outputs": [],
@@ -72,7 +63,7 @@
     "           \"Plastic\", \"Styrofoam\", \"Plastic bag\", \"Battery\", \"Clothing\")\n",
     "\n",
     "# config file 들고오기\n",
-    "cfg = Config.fromfile('/opt/ml/cv18-detection/T4148/configs/retina_swin_L_v3/run.py')\n",
+    "cfg = Config.fromfile('/opt/ml/cv18-detection/T4148/configs/retina_resnext_v1/run.py')\n",
     "\n",
     "root='/opt/ml/dataset/'\n",
     "\n",
@@ -89,7 +80,7 @@
     "\n",
     "cfg.seed=2021\n",
     "cfg.gpu_ids = [1]\n",
-    "cfg.work_dir = '/opt/ml/work_dirs/retina_swin_L_v3'\n",
+    "cfg.work_dir = '/opt/ml/work_dirs/retina_resnext_v1'\n",
     "cfg.csvsave_dir =cfg.work_dir\n",
     "#cfg.model.roi_head.bbox_head.num_classes = 10\n",
     "cfg.model.bbox_head.num_classes = 10\n",
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "b086a8cf",
    "metadata": {},
    "outputs": [
@@ -128,21 +119,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "83b3eae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checkpoint path\n",
+    "checkpoint_path = os.path.join(cfg.work_dir, f'{epoch}.pth')\n",
+    "checkpoint_path ='/opt/ml/work_dirs/retina_resnext_v1/best_bbox_mAP_epoch_37.pth'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2bbe1bd9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load checkpoint from local path: /opt/ml/work_dirs/retina_swin_L_v3/latest.pth\n"
+      "load checkpoint from local path: /opt/ml/work_dirs/retina_resnext_v1/best_bbox_mAP_epoch_37.pth\n"
      ]
     }
    ],
    "source": [
-    "# checkpoint path\n",
-    "checkpoint_path = os.path.join(cfg.work_dir, f'{epoch}.pth')\n",
+    "\n",
     "\n",
     "model = build_detector(cfg.model, test_cfg=cfg.get('test_cfg')) # build detector\n",
     "checkpoint = load_checkpoint(model, checkpoint_path, map_location='cpu') # ckpt load\n",
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "c9f5c2bb",
    "metadata": {},
    "outputs": [
@@ -161,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 15.2 task/s, elapsed: 320s, ETA:     0s"
+      "[>>>>>>>>>>>>>>>>>>>>>>>>>>] 4871/4871, 18.6 task/s, elapsed: 263s, ETA:     0s"
      ]
     }
    ],
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "5672a0ff",
    "metadata": {},
    "outputs": [
@@ -213,27 +215,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 0.5239088 236.01587 685.78503 302.60468 750....</td>\n",
+       "      <td>0 0.429913 236.61542 688.84796 303.92267 748.8...</td>\n",
        "      <td>test/0000.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0 0.44567618 751.0838 651.2268 895.5535 988.29...</td>\n",
+       "      <td>0 0.44260532 743.71844 650.6339 900.663 990.96...</td>\n",
        "      <td>test/0001.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0 0.5161325 430.63684 272.87323 664.29663 340....</td>\n",
+       "      <td>0 0.52844536 415.0647 277.06625 660.82556 326....</td>\n",
        "      <td>test/0002.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0 0.41132918 23.627808 70.52054 1024.0 976.033...</td>\n",
+       "      <td>0 0.24995495 8.917694 183.7544 1009.94055 880....</td>\n",
        "      <td>test/0003.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0 0.47701162 457.1854 410.60812 643.5305 539.7...</td>\n",
+       "      <td>0 0.7174196 199.86447 295.46085 839.49194 760....</td>\n",
        "      <td>test/0004.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -242,14 +244,14 @@
       ],
       "text/plain": [
        "                                    PredictionString       image_id\n",
-       "0  0 0.5239088 236.01587 685.78503 302.60468 750....  test/0000.jpg\n",
-       "1  0 0.44567618 751.0838 651.2268 895.5535 988.29...  test/0001.jpg\n",
-       "2  0 0.5161325 430.63684 272.87323 664.29663 340....  test/0002.jpg\n",
-       "3  0 0.41132918 23.627808 70.52054 1024.0 976.033...  test/0003.jpg\n",
-       "4  0 0.47701162 457.1854 410.60812 643.5305 539.7...  test/0004.jpg"
+       "0  0 0.429913 236.61542 688.84796 303.92267 748.8...  test/0000.jpg\n",
+       "1  0 0.44260532 743.71844 650.6339 900.663 990.96...  test/0001.jpg\n",
+       "2  0 0.52844536 415.0647 277.06625 660.82556 326....  test/0002.jpg\n",
+       "3  0 0.24995495 8.917694 183.7544 1009.94055 880....  test/0003.jpg\n",
+       "4  0 0.7174196 199.86447 295.46085 839.49194 760....  test/0004.jpg"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
