--- a/T4148/inference.ipynb
+++ b/T4148/inference.ipynb
@@ -173,6 +173,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "f758ba5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'output' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m output\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'output' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "id": "5672a0ff",
    "metadata": {},
